--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-router/express": "^7.13.0",
     "@react-router/node": "^7.13.0",
     "@react-router/serve": "^7.13.0",
+    "adm-zip": "^0.5.16",
     "compression": "^1.8.1",
     "express": "^5.2.1",
     "isbot": "^5.1.31",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@react-router/dev": "^7.13.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/adm-zip": "^0.5.7",
     "@types/compression": "^1.8.1",
     "@types/express": "^5.0.6",
     "@types/morgan": "^1.9.10",
