--- a/nginx.conf
+++ b/nginx.conf
@@ -13,8 +13,12 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Logging
-    access_log /dev/stdout;
+    # Custom log format that includes the X-Ingress-Path header
+    log_format ingress '$remote_addr - $remote_user [$time_local] "$request" '
+                       '$status $body_bytes_sent '
+                       '"X-Ingress-Path: $http_x_ingress_path"';
+
+    access_log /dev/stdout ingress;
 
     sendfile on;
     keepalive_timeout 65;
@@ -43,7 +47,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Pass through the ingress path header (in case app needs it for other purposes)
+            # Pass through the ingress path header
             proxy_set_header X-Ingress-Path $ingress_path;
 
             # WebSocket support
@@ -61,8 +65,6 @@ http {
             proxy_buffer_size 4k;
 
             # Rewrite Location headers in redirects to include the ingress path
-            # This is the key fix - when Node.js returns "Location: /instances",
-            # Nginx rewrites it to "Location: /api/hassio_ingress/.../instances"
             proxy_redirect ~^/(.*)$ $ingress_path/$1;
             proxy_redirect / $ingress_path/;
         }
