--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,4 @@
 # Nginx configuration for Home Assistant Ingress
-# Handles path rewriting so the Node.js app doesn't need basename awareness
 
 worker_processes 1;
 error_log /dev/stdout info;
@@ -13,9 +12,7 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Custom log format that includes the X-Ingress-Path header
-    log_format ingress '$remote_addr - $remote_user [$time_local] "$request" '
-                       '$status $body_bytes_sent '
+    log_format ingress '$remote_addr [$time_local] "$request" $status '
                        '"X-Ingress-Path: $http_x_ingress_path"';
 
     access_log /dev/stdout ingress;
@@ -23,7 +20,6 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
-    # Gzip compression
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml;
 
@@ -34,20 +30,26 @@ http {
         allow 172.30.32.2;
         deny all;
 
-        # Capture the X-Ingress-Path header for use in rewrites
         set $ingress_path $http_x_ingress_path;
 
+        # Fix compounded asset paths - rewrite /assets/assets/... to /assets/...
+        # This handles the React Router dynamic import path issue
+        location ~ ^/assets/assets/(.*)$ {
+            rewrite ^/assets/assets/(.*)$ /assets/$1 last;
+        }
+
+        # Also handle triple-compounded paths
+        location ~ ^/assets/assets/assets/(.*)$ {
+            rewrite ^/assets/assets/assets/(.*)$ /assets/$1 last;
+        }
+
         location / {
-            # Proxy to the Node.js app running on port 3000
             proxy_pass http://127.0.0.1:3000;
 
-            # Pass through standard headers
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-
-            # Pass through the ingress path header
             proxy_set_header X-Ingress-Path $ingress_path;
 
             # WebSocket support
@@ -55,16 +57,14 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
 
-            # Timeouts
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
 
-            # Buffer settings
             proxy_buffering off;
             proxy_buffer_size 4k;
 
-            # Rewrite Location headers in redirects to include the ingress path
+            # Rewrite Location headers for redirects
             proxy_redirect ~^/(.*)$ $ingress_path/$1;
             proxy_redirect / $ingress_path/;
         }
